--- a/real_data_analysis/validation_brain_CG_plac_seq.ipynb
+++ b/real_data_analysis/validation_brain_CG_plac_seq.ipynb
@@ -5,7 +5,7 @@
    "id": "868287f4-a3e7-41b8-bcb3-c63b1467c092",
    "metadata": {},
    "source": [
-    "Codes for making Figure 4C in the manuscript."
+    "Codes for making Figure 4c in the manuscript."
    ]
   },
   {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "4c604045-febc-49cd-accf-9cd12e58b028",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5e7b4d3e-e3a4-424a-86fc-757e915591dc",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e0cbc7a8-d93d-48b7-bcca-29e983066c7e",
    "metadata": {},
    "outputs": [],
@@ -118,10 +118,12 @@
     "        if(method == 'proposed'){\n",
     "            res_df <- load_proposed(ct, datasets = study,\n",
     "                                    fn_suffix = sprintf('%s%s', fn_suffix,\n",
-    "                                                        batch_suffix))[[1]]\n",
+    "                                                        batch_suffix),\n",
+    "                                    output_dir = output_dir)[[1]]\n",
     "        }else if(method == 'Signac'){\n",
     "            res_df <- load_Signac(ct, datasets = study,\n",
-    "                                  fn_suffix = fn_suffix)[[1]]\n",
+    "                                  fn_suffix = fn_suffix,\n",
+    "                                  output_dir = output_dir)[[1]]\n",
     "        }else if(method == 'SCENT'){\n",
     "            if(study == 'brain_CG'){\n",
     "                if(fn_suffix != ''){\n",
@@ -133,9 +135,11 @@
     "                n_sets <- 10\n",
     "            }\n",
     "            res_df <- load_SCENT(ct, n_sets = n_sets, datasets = study,\n",
-    "                                 fn_suffix = sprintf('%s%s%s', fn_suffix, batch_suffix, '_n_bootstrap_5000'))[[1]]\n",
+    "                                 fn_suffix = sprintf('%s%s%s', fn_suffix, batch_suffix, '_n_bootstrap_5000'),\n",
+    "                                 output_dir = output_dir)[[1]]\n",
     "        }else if(method == 'GBM'){\n",
-    "            res_df <- load_GBM(ct, datasets = study, binarize_method = GBM_par$binarize_method, method_par = GBM_par$method_par)[[1]]\n",
+    "            res_df <- load_GBM(ct, datasets = study, binarize_method = GBM_par$binarize_method, method_par = GBM_par$method_par,\n",
+    "                                           output_dir = output_dir)[[1]]\n",
     "        }\n",
     "        \n",
     "        n_total_pairs[i_ct] <- nrow(res_df)\n",
@@ -238,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "93d22a4c-0bf3-41ea-b5a1-7708cedddbf3",
    "metadata": {},
    "outputs": [],
@@ -281,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f11c59db-8824-4eab-85bc-73666db39fc5",
    "metadata": {},
    "outputs": [],
@@ -330,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "cc54c817-2274-4cf1-8519-b3e578f1c9d2",
    "metadata": {},
    "outputs": [],
@@ -344,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a490eee6-f52a-4cc1-97d5-cf7b6ab91016",
    "metadata": {},
    "outputs": [
@@ -382,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "741d1360-3355-498c-964d-a48145ddbd75",
    "metadata": {},
    "outputs": [],
@@ -400,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "c5df0139-51b5-47f2-b428-d9ebab021039",
    "metadata": {},
    "outputs": [
@@ -444,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "b3687274-f8a5-4d8c-9f2e-9a99af2f5ec4",
    "metadata": {},
    "outputs": [],
@@ -458,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2a716319-c351-4f91-8442-0706f10ea81e",
    "metadata": {},
    "outputs": [
@@ -553,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "8d48ef23-9f27-4756-9ed7-982f0adbae2a",
    "metadata": {
     "scrolled": true
@@ -589,7 +593,7 @@
     "coord_cartesian(ylim=c(0.45,1)) +\n",
     "theme_classic(base_size = 20) \n",
     "\n",
-    "ggsave(sprintf('%s/brain/consistency_GBM_placseq.pdf', fig_dir), width = 8, height = 5)"
+    "#ggsave(sprintf('%s/brain/consistency_GBM_placseq.pdf', fig_dir), width = 8, height = 5)"
    ]
   },
   {
@@ -597,12 +601,12 @@
    "id": "c8d0e6e9-837d-47e2-90e1-ea4f293fbbd1",
    "metadata": {},
    "source": [
-    "Demonstrate the top_n approach gives way too many pairs."
+    "Demonstrate that the top_n approach gives way too many pairs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "d19152c1-9b97-4b41-8fb2-d4cce56e247a",
    "metadata": {},
    "outputs": [
