--- a/real_data_analysis/validation_brain_CG_plac_seq.ipynb
+++ b/real_data_analysis/validation_brain_CG_plac_seq.ipynb
@@ -597,6 +597,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "9b2602bd-d274-4aab-ae37-b4ec1b3839ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "write.table(overlap_gbm_df[!overlap_gbm_df$cell_type == 'Microglia', c('cutoff', 'OR', 'cell_type')],\n",
+    "           '../manuscript/Source Data/supplementary/figure_10.txt')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c8d0e6e9-837d-47e2-90e1-ea4f293fbbd1",
    "metadata": {},
